# odoo-deploy

./: .gitignore  .gitmodules  BARCODE_SHOPFLOOR_SETUP.md  CREATE_NEW_DATABASE.md  Dockerfile  INTERCOMPANY_SETUP.md  README.md  WOOCOMMERCE_SETUP.md  check_modules.py  clean_warehouse.py  cleanup_db.py  create_new_db.py  docker-compose.yaml  docker-compose.yml  docker-entrypoint-deps.sh  install_all_departments.py  install_modules.py  install_modules_clean.py  install_wms_modules.py  setup-submodules.ps1  setup-submodules.sh
config/: odoo.conf
unified_platform/api/: Dockerfile  README.md  alembic.ini  pyproject.toml
unified_platform/api/alembic/: env.py
unified_platform/api/alembic/versions/: 20260216_0001_phase1_schema.py  20260216_0002_phase2_sales_sync.py
unified_platform/api/app/: __init__.py  main.py  worker.py
unified_platform/api/app/api/: deps.py  router.py
unified_platform/api/app/core/: config.py  security.py
unified_platform/api/app/db/: init_db.py  session.py
unified_platform/api/app/models/: __init__.py  base.py  core.py  enums.py  integration.py  inventory.py  mdm.py  pim.py  procurement.py  sales.py
unified_platform/api/app/schemas/: auth.py  common.py  dashboard.py  inventory.py  pim.py  rbac.py  sales.py  supply.py  woo.py
unified_platform/api/app/services/: audit.py  dashboard.py  nshift.py  pim_import.py  wgr.py
unified_platform/api/app/tasks/: nshift.py  pim.py  wgr.py  woo.py
unified_platform/api/scripts/: migrate_from_odoo.py  odoo_adapter.py  test_connections.py
unified_platform/api/tests/: test_auth_and_products.py
(+79 files in other folders)
